<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_l"
    android:orientation="vertical"
    tools:context="com.guerritastudio.albertogarcia.droidev3.ui.fragment.InfoFragment">

    <Switch
        android:id="@+id/fragment_info_sensors_status_sw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xl"
        android:layout_marginTop="@dimen/margin_s"
        android:text="@string/sensors_status" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow android:layout_marginBottom="@dimen/margin_s">

            <TextView
                android:layout_gravity="center_horizontal"
                android:text="@string/sensors"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:textStyle="bold" />

            <TextView
                android:layout_gravity="center_horizontal"
                android:text="@string/values"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_s"
                android:text="@string/voltage_tv" />

            <RelativeLayout android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/fragment_info_voltage_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off" />

                <ProgressBar
                    android:id="@+id/fragment_info_progressBar1"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />
            </RelativeLayout>

        </TableRow>


        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_s"
                android:text="@string/current_draw_tv" />

            <RelativeLayout android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/fragment_info_currentdraw_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/off" />

                <ProgressBar
                    android:id="@+id/fragment_info_progressBar2"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />
            </RelativeLayout>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_s"
                android:text="@string/touch_sensor_tv" />

            <RelativeLayout android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/fragment_info_touch_sensor_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/off" />

                <ProgressBar
                    android:id="@+id/fragment_info_progressBar3"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />
            </RelativeLayout>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_s"
                android:text="@string/ir_sensor_tv" />

            <RelativeLayout android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/fragment_info_ir_sensor_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/off" />

                <ProgressBar
                    android:id="@+id/fragment_info_progressBar4"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />
            </RelativeLayout>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_s"
                android:text="@string/color_sensor_tv" />

            <RelativeLayout android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/fragment_info_color_sensor_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/off" />

                <ProgressBar
                    android:id="@+id/fragment_info_progressBar5"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_s"
        android:layout_marginTop="@dimen/margin_xl"
        android:text="@string/leds"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_s"
            android:text="@string/led_pattern" />

        <Spinner
            android:id="@+id/fragment_info_led_pattern_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_s" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_xxl"
        android:orientation="horizontal">

    </LinearLayout>

    <Button
        android:id="@+id/fragment_info_about_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_l"
        android:text="@string/about" />


</LinearLayout>
