<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/activity_connect_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="132dp"
            android:layout_height="132dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_xl"
            android:src="@drawable/ev3_head" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="40dp" />

        <EditText
            android:id="@+id/connect_ipAddressET"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:digits="0123456789."
            android:gravity="center"
            android:hint="@string/enter_ip"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp">

            <ProgressBar
                android:id="@+id/connect_ev3_pbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_l"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/connect_ev3_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_button"
                    android:text="@string/connect" />

                <Button
                    android:id="@+id/search_ev3_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_button"
                    android:layout_marginLeft="@dimen/margin_xl"
                    android:text="@string/search" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>